--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 Hello, world!
 
 <div title="ruf">
- <img src="assets/polkadog.PNG" alt="ruf" width="20px">
+ <img src="assets/polkadog.PNG" alt="ruf" width="200">
 </div>
